[package]
name = "first-person-adventure"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0", features = ["file_watcher"] }
bevy_fps_controller = "0.3.0"
bevy_mod_picking = { version = "0.20.0", features = ["backend_raycast"] }
rand = "0.8.5"
bevy_rapier3d = "0.27"
bevy_common_assets = { version = "0.11", features = ["ron"] }
serde = { version = "1.0.21", features = ["derive"] }
